# cllm-mcp

./: .gitignore  ADR-0003-COMPLETION-REPORT.md  ADR-0003-QUICK-REFERENCE.md  CODEBASE_EXPLORATION_FINDINGS.md  CONTRIBUTING.md  IMPLEMENTATION-COMPLETE.md  LICENSE  QUICKSTART.md  README.md  llms.txt  mcp-call-tool.sh  mcp-config.example.json  mcp-config.json  mcp-daemon  mcp-list-tools.sh  mcp-wrapper.sh  mcp_cli.py  mcp_daemon.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: claude-code-review.yml  claude.yml  tests.yml
.trunk/: trunk.yaml
cllm_mcp/: __init__.py  client.py  config.py  daemon.py  daemon_utils.py  main.py  socket_utils.py
docs/: ADR-0003-COMPLETION-REPORT.md  ADR-0003-INDEX.md  ADR-0003-REVIEW.md  ADR-0004-IMPLEMENTATION.md  ADR-0004-SUMMARY.md  DAEMON-ARCHITECTURE-DIAGRAMS.txt  DAEMON-ARCHITECTURE.md  DAEMON-EXPLORATION-SUMMARY.md  DAEMON-QUICK-REFERENCE.md  MIGRATION.md
docs/decisions/: 0001-adopt-vibe-adr.md  0002-adopt-uv-package-manager.md  0003-unified-daemon-client-command.md  0004-standardize-configuration-with-cllm-folder.md  0005-IMPLEMENTATION.md  0005-RETROSPECTIVE.md  0005-daemon-auto-initialize-mcp-servers.md  0006-tool-invocation-examples-in-list-tools.md  0007-IMPLEMENTATION.md  0007-drop-legacy-commands-modernize-config.md
docs/testing/: ADR-0003-testing-strategy.md  COMPLETION-CHECKLIST.md  IMPLEMENTATION-SUMMARY.md  README.md  TEST-SUITE-OVERVIEW.md  TESTING-GUIDE.md
examples/: README.md  comprehensive-demo.sh  daemon-batch-processing.sh  file-operations.sh  llm-integration.md  quick-datetime-test.sh  setup-datetime-config.sh  start-daemon-with-datetime.sh
examples/cllm/: Cllmfile.yml
templates/: VIBE_ADR_TEMPLATE.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_daemon_mode_integration.py  test_direct_mode_integration.py  test_fallback_behavior.py
tests/unit/: __init__.py  test_adr_0005_initialization.py  test_adr_0006_tool_examples.py  test_config_management.py  test_daemon_detection.py  test_main_dispatcher.py
