[project]
name = "mcp-cli"
version = "1.0.0"
description = "A command-line utility for making MCP tool calls without an LLM"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "oz-shoplogix" }
]
keywords = ["mcp", "model-context-protocol", "cli", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No external dependencies - uses only Python standard library
dependencies = []

[project.scripts]
mcp-cli = "mcp_cli:main"
mcp-daemon = "mcp_daemon:main"

[project.urls]
Homepage = "https://github.com/oz-shoplogix/research"
Repository = "https://github.com/oz-shoplogix/research"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
