[project]
name = "mcp-cli"
version = "1.0.0"
description = "A command-line utility for making MCP tool calls without an LLM"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name = "oz-shoplogix" }
]
keywords = ["mcp", "model-context-protocol", "cli", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# No external dependencies - uses only Python standard library
dependencies = []

[project.scripts]
cllm-mcp = "cllm_mcp.main:main"

[project.urls]
Homepage = "https://github.com/oz-shoplogix/research"
Repository = "https://github.com/oz-shoplogix/research"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=7.0", "pytest-mock>=3.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
# Test discovery patterns
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Test paths
testpaths = ["tests"]

# Output options
addopts = "--strict-markers -v --tb=short"

# Markers for test organization
markers = [
    "unit: Unit tests - fast, isolated, no dependencies",
    "integration: Integration tests - may require running processes",
    "slow: Tests that take longer to run",
    "socket: Tests requiring Unix socket operations",
    "daemon: Tests requiring daemon functionality",
]

# Coverage options
[tool.coverage.run]
source = ["mcp_cli", "mcp_daemon"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
skip_covered = false
precision = 2
show_missing = true
